[metadata]
name = designate-enhancedhandler
version = 1.0
summary = Designate handler extension to register VMs and floating IPs associated to a domain specific for a tenant and network
description-file =
    README.md
author = Jorge Lorenzo Gallardo
author-email = jorge.lorenzogallardo@telefonica.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    designate_enhancedhandler

[entry_points]
designate.notification.handler =
    nova_enhanced = designate_enhancedhandler.notification_handler.nova:NovaEnhancedHandler
    neutron_enhanced = designate_enhancedhandler.notification_handler.neutron:NeutronEnhancedHandler

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designate-enhancedhandler/locale
domain = designate-enhancedhandler

[update_catalog]
domain = designate-enhancedhandler
output_dir = designate-enhancedhandler/locale
input_file = designate-enhancedhandler/locale/designate-enhancedhandler.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designate-enhancedhandler/locale/designate-enhancedhandler.pot
